fix the alignment of notify me message

--- a/src/containers/myAccount/components/Bridal/styles.scss
+++ b/src/containers/myAccount/components/Bridal/styles.scss
@@ -874,6 +874,7 @@
       line-height: 22px;
       font-weight: 400;
       text-transform: capitalize;
+      word-wrap: break-word;
       svg {
         vertical-align: text-bottom;
       }
